bk_ida/gccida/c3/convert_regs_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_1/src/reg-stack.c:3094:1: error: unknown type name 'block_info_0'; did you mean 'block_info'?
block_info_0 bi; // [rsp+50h] [rbp-30h] 
^~~~~~~~~~~~
block_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_1/src/reg-stack.c:202:4: note: 'block_info' declared here
} *block_info;
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_1/src/reg-stack.c:3101:8: error: use of undeclared identifier 'block_info_0'
bi = ( block_info_0)block->aux; 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_1/src/reg-stack.c:3199:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
insna = ( rtx)insna[1]; 
              ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_1/src/reg-stack.c:3206:13: error: expected identifier or '('
 struct set = gen_rtx_fmt_ee( SET, VOIDmode, FP_mode_reg[rega - 8][15], nan); 
            ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_1/src/obj/reg-stack.o] Error 1
